SemanticAnalyzer/tests/success/clase_metodo_sentencia_puntoycoma.java
class A {
	dynamic boolean methodb1 (Objeto o1, Objeto o2)
		var String s1, s2;
	{
		;
	}
}

class Objeto {
	static void main()
	{
	}
}
