SemanticAnalyzer/tests/fail/this_metodo_static.java
class A {
	static boolean methodb1 (Objeto o1, Objeto o2)
		var Objeto o3, o4;
		var String s1, s2;
	{}

	dynamic int methodi1 () {}
}

class Objeto {
	var int n;

	static void main()
	var Objeto o;
	var int m;
	{
		o = this;
		m = o.getN();
	}

	dynamic int getN()
	{
		return n;
	}
}
